add postgresql_extensions_options dictionary to configure postgresql extensions

--- a/templates/postgresql.conf-9.1.j2
+++ b/templates/postgresql.conf-9.1.j2
@@ -560,3 +560,6 @@ restart_after_crash = {{'on' if postgresql_restart_after_crash else 'off'}}		# r
 #------------------------------------------------------------------------------
 
 #custom_variable_classes = ''		# list of custom variable class names
+{% for key, value in postgresql_extensions_options.items() %}
+{{key}} = {{value}}
+{% endfor %}
